index corrigido &nbsp;

--- a/index.html
+++ b/index.html
@@ -1,62 +1,4 @@
-C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/ProcessoAgil/Documents/Wesley/scrap.py
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <head>
@@ -64,16 +6,8 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-
-
-
-
-
-
-
-
     <script language="javascript" type="text/JavaScript"
-            src="https://www2.tjal.jus.br/sajcas/verificarLogin.js?script=1629381389456"></script>
+            src="https://www2.tjal.jus.br/sajcas/verificarLogin.js?script=1629411267255"></script>
 
     <script language="javascript">
         if (window.sajcas && window.sajcas.usuarioLogadoNoCasServer) {
@@ -117,7 +51,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 	window.saj.env.css = '/cpopg/css';
 	window.saj.env.js = '/cpopg/js';
 	window.saj.env.imagens = '/cpopg/imagens';
-	window.saj.env.queryString = 'processo.codigo=01000PCGR0000&processo.foro=1&processo.numero=0705677-72.2019.8.02.0001&uuidCaptcha=sajcaptcha_99e5e1cd3d4b4161b33b1e952e70d598';
+	window.saj.env.queryString = 'processo.codigo=01000PCGR0000&processo.foro=1&processo.numero=0705677-72.2019.8.02.0001&uuidCaptcha=sajcaptcha_82f949f561e649beb4a047511aaf89d2';
 
 	window.saj.cpo = window.saj.cpo || {};
 
@@ -757,7 +691,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Autor&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Autor</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -772,8 +706,8 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 
 			<br />
-			<span class="mensagemExibindo">Defensor P:&nbsp;</span>
-			Defensoria Pública do Estado de Alagoas&nbsp;
+			<span class="mensagemExibindo">Defensor P:</span>
+			Defensoria Pública do Estado de Alagoas
 
 
 		</td>
@@ -792,7 +726,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Ré&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Ré</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -822,7 +756,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Confrontan&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Confrontan</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -852,7 +786,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -889,7 +823,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Autor&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Autor</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -904,8 +838,8 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 
 			<br />
-			<span class="mensagemExibindo">Defensor P:&nbsp;</span>
-			Defensoria Pública do Estado de Alagoas&nbsp;
+			<span class="mensagemExibindo">Defensor P:</span>
+			Defensoria Pública do Estado de Alagoas
 
 
 		</td>
@@ -924,7 +858,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Autora&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Autora</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -954,7 +888,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Ré&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Ré</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -984,7 +918,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Confrontan&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Confrontan</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -1014,7 +948,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Confrontan&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Confrontan</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -1044,7 +978,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -1074,7 +1008,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -1104,7 +1038,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <tr class="fundoClaro">
 	<td valign="top" width="141" style="padding-bottom: 5px" class="label">
-		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I&nbsp;</span>
+		<span class="mensagemExibindo tipoDeParticipacao">Terceiro I</span>
 	</td>
 	<td class="nomeParteEAdvogado" width="*" align="left" style="padding-bottom: 5px">
 
@@ -1140,7 +1074,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 
 <span id="mensagensExibindopartes" class="mensagemExibindo">
 
-</span> &nbsp;
+</span>
 
     <a id="linkpartes" href="javascript:" class="linkNaoSelecionado unj-link-collapse">
         <span id="setasDireitapartes" class="setasDireita">
@@ -1277,7 +1211,7 @@ C:\Users\ProcessoAgil\Documents\Wesley\venv_scrap\Scripts\python.exe C:/Users/Pr
 			<thead>
 				<tr>
 				  <th width="120" class="label" style="vertical-align: bottom">Data</th>
-				  <th vAlign="middle" width="20" aria-hidden="true">&nbsp;</th>
+				  <th vAlign="middle" width="20" aria-hidden="true"></th>
 				  <th vAlign="middle"  class="label">Movimento</th>
 				</tr>
 				<tr class="fundoEscuro" height="2" aria-hidden="true">
@@ -5556,7 +5490,7 @@ Data: 15/04/2019 13:23
 
 <span id="mensagensExibindomovimentacoes" class="mensagemExibindo">
 
-</span> &nbsp;
+</span>
 
     <a id="linkmovimentacoes" href="javascript:" class="linkNaoSelecionado unj-link-collapse">
         <span id="setasDireitamovimentacoes" class="setasDireita">
@@ -6060,7 +5994,7 @@ Data: 15/04/2019 13:23
 
 
 
-	<form action="/cpopg/show.do?processo.codigo=01000PCGR0000&processo.foro=1&processo.numero=0705677-72.2019.8.02.0001&uuidCaptcha=sajcaptcha_99e5e1cd3d4b4161b33b1e952e70d598" id="popupSenha" style="display: none;" method="POST">
+	<form action="/cpopg/show.do?processo.codigo=01000PCGR0000&processo.foro=1&processo.numero=0705677-72.2019.8.02.0001&uuidCaptcha=sajcaptcha_82f949f561e649beb4a047511aaf89d2" id="popupSenha" style="display: none;" method="POST">
 
 		<table role="document">
 			<tr>
@@ -6072,7 +6006,7 @@ Data: 15/04/2019 13:23
 
 
 
-							<script language="javascript" type="text/JavaScript" src="https://www2.tjal.jus.br/sajcas/conteudoIdentificacao?script=1629381389463"></script>
+							<script language="javascript" type="text/JavaScript" src="https://www2.tjal.jus.br/sajcas/conteudoIdentificacao?script=1629411267265"></script>
 
 
 				</tr>
@@ -6205,13 +6139,3 @@ Data: 15/04/2019 13:23
         </div>
     </nav>
 </footer>
-
-
-
-
-
-
-
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"errorBeacon":"bam-cell.nr-data.net","licenseKey":"b61bdf610d","agent":"","beacon":"bam-cell.nr-data.net","applicationTime":53,"applicationID":"111652883","transactionName":"MlZRN0QECkMAVERZDgscYBdEEBBDIFREWQ4LHFERGAYLXU9EX1YVFV9SDRgWBVpPVEBfTxZHQRZCFkpRAkNZXw9LYFsMQSQHRAhYXg==","queueTime":0}</script></body>
-</html>
-
